test/error/LexLiteralFloatFractUnderscoreExp.ci
public static class Test
{
	public static bool Run()
	{
		double a = 1.0_e2; //ERROR: Invalid floating-point number
		return true;
	}
}
